// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SupportInstructions renders correctly 1`] = `
<div>
  <div
    class="card-header small-title"
  >
    support-instructions
  </div>
  <div
    class="card-body"
  >
    instructions
  </div>
</div>
`;

exports[`SupportInstructions renders no results message when there is no existing instruction 1`] = `
<div>
  <div
    class="card-header small-title"
  >
    support-instructions
  </div>
  <div
    class="no-results"
  >
    no-support-instructions
  </div>
</div>
`;
